--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,15 @@
-daemon:
-  image: int128/slack-docker
-  volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
-  environment:
-    - webhook=https://hooks.slack.com/services/...
-    #- include_hostname=1
+version: '3'
+
+services:
+  slack-docker:
+    image: shadowkrusha/docker-slack
+    environment:
+      # Adjust as required
+      webhook: https://hooks.slack.com/#######
+      include_hostname: 1
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    network_mode: "host"
+    deploy:
+      mode: global
+
